cmake_minimum_required(VERSION 3.21)
project("Assignment_1" VERSION 1.0.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(EXECUTABLE_NAME "main")
set(EXECUTABLE_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/main.cxx")
add_executable(${EXECUTABLE_NAME} ${EXECUTABLE_SOURCES})
target_compile_options(${EXECUTABLE_NAME} PRIVATE -Werror -Wall -Wextra -Wpedantic)
